<resources>

    <string name="app_name">Homeless Miaus</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tiene cuenta? </string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_use">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="hint_phone">Telefono</string>
    <string name="name">Nombre</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="plikes">Likes</string>
    <string name="sex">Sexo</string>
    <string name="likes"> Likes</string>

    <string name="text_button_createaccount_pet">Publicar</string>
    <string name="agePet">Edad</string>
    <string name="description">Descripión</string>
    <string name="toolbar_tittle_createaccount_pet">Publicar Mascota</string>
    <string name="password">Contraseña</string>
    <string name="toolbar_tittle_management_contact">Gestion de contacto</string>
    <string name="text_button_update">Actualizar</string>
    <string name="text_button_detelete">Eliminar</string>
    <string name="toolbar_tittle_management_pet">Gestion de mascotas</string>
    <string name="likenumbercard_card">Me Gusta</string>
    <string name="toolbar_tittle_homeless">Homeless Miauss</string>
    <string name="name_provider">Nombre empresa</string>
    <string name="razon_social">Razon social</string>
    <string name="address">Dirección</string>
    <string name="turn">Giro</string>
    <string name="text_button_save">Guardar Proveedor</string>
    <string name="toolbar_tittle_management_provider">Gestion Proveedores</string>
    <string name="welcome">Bienvenido a</string>


    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string-array name="sex_array">
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>
    <string-array name="turn_array">

        <item>Comida</item>
        <item>Medicamentos</item>
        <item>Accesorios mascotas</item>
    </string-array>

</resources>
