<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fvaras.ale.homelessmiaus.view.ManagementProvider">


    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/name_provider" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/managerProviderName"
            android:background="@drawable/rounded_edittext" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/managerProvidertPhone"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/managerProviderEmail"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/razon_social" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/managerProviderRazonSocial"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/managerProviderAddress"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/turn" />
        <Spinner
            android:id="@+id/spTurn"
            android:layout_width="180dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:entries="@array/turn_array" />



    </LinearLayout>


    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btnUpdateProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_update"
        android:theme="@style/RaisedButtonDark" />
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btnDeleteProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_detelete"
        android:theme="@style/RaisedButtonDark" />
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btnSaveProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_save"
        android:theme="@style/RaisedButtonDark" />

</LinearLayout>
