<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fvaras.ale.homelessmiaus.view.ManagementContacts">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView

            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/managerContactName"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"

            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/managerContactPhone"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/managerContactEmail"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/managerContactPassword"
            android:background="@drawable/rounded_edittext" />

    </LinearLayout>
    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btnUpdateContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_update"
        android:theme="@style/RaisedButtonDark" />
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btnDeleteContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_detelete"
        android:theme="@style/RaisedButtonDark" />

</LinearLayout>
