<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.fvaras.ale.homelessmiaus.view.ManagementPets">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout

            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/name" />

            <EditText

                android:id="@+id/managerPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/agePet" />

            <EditText
                android:id="@+id/managerPetAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/sex" />

            <EditText
                android:id="@+id/managerPetSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/managerPetDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/rounded_edittext"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollHorizontally="false"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_marginTop="40dp"
                android:id="@+id/btnUpdatePet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_update"
                android:theme="@style/RaisedButtonDark" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btnDeletePet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_detelete"
                android:theme="@style/RaisedButtonDark" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>