<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    cardview:cardCornerRadius="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">
        <ImageView
            android:id="@+id/avatarUserCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/flash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/tvNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textSize="25dp" />



                <TextView
                    android:id="@+id/tvPhoneCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />



            <TextView
                android:id="@+id/tvEmailCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="15sp" />



        </LinearLayout>


    </FrameLayout>

</android.support.v7.widget.CardView>